--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.2"
 
 loans:
-  message: "Welcome to EazyBank loans related PROD APIs"
+  message: "Welcome to EazyBank loans related production APIs"
   contactDetails:
     name: "Jamie Harden - Product Owner"
     email: "jamieharden@gmail.com"
