--- a/loans.yml
+++ b/loans.yml
@@ -4,7 +4,7 @@ build:
 loans:
   message: "Welcome to EazyBank loans related local APIs"
   contactDetails:
-    name: "Ivan Doe - Developer"
+    name: "Ivan Doe - Back End Developer"
     email: "vanyakus@gmail.com"
   onCallSupport:
     - (555)555-1234
