--- a/loans.yml
+++ b/loans.yml
@@ -2,9 +2,9 @@ build:
   version: "3.2"
 
 loans:
-  message: "Welcome to EazyBank loans related local APIs"
+  message: "Welcome to EazyBank loans related docker APIs"
   contactDetails:
-    name: "Ivan Doe - Back End Developer"
+    name: "Ivan Doe - Front End Developer"
     email: "vanyakus@gmail.com"
   onCallSupport:
     - (555)555-1234
