--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.5"
 
 cards:
-  message: "Welcome to EazyBank cards related PROD APIs"
+  message: "Welcome to EazyBank cards related production APIs"
   contactDetails:
     name: "John Doe - Product Owner"
     email: "johndoe@gmail.com"
